--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "ES2018",
+    "target": "es2018",
+    "module": "commonjs",
     "strict": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
